tests/semantic/invalid/44_e_base_args_arity.hulk
class Person(first: String, last: String) {}
class K(f: String) is Person(f) {}
